--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -134,6 +134,8 @@
                         on GitHub. Click the button above to head over to the GitHub Source.
                     </p>
                     <br><br>
+                </div>
+                <div class="box">
                     <h1 class="title" style="color: black">Tips to Stay Safe</h1>
                     <p class="subtitle" style="color: black;">
                         • Make sure the URL is <strong style="color: black">https://clutrack.io</strong>
@@ -143,6 +145,23 @@
                         • Never give your private key and password to Anybody EVER
                         <br>
                         • This site will never ask you for your money. If it does check the URL
+                    </p>
+                </div>
+                <div class="box">
+                    <h1 class="title" style="color: black">Want to Support CluTrack?</h1>
+                    <p class="subtitle" style="color: black;">
+                        <strong style="color:black">If you'd like to support CluTrack server costs:</strong>
+                        <br>
+                        0xF88e4A3af660ab09979a33c3c99E576244dda5aF
+                        <br>
+                        Please do NOT send CLU here. It will be drained each month to cover server costs and I'd rather contribute to another token's dips.
+                        <br>
+                        <strong style="color: black">If you'd like to support me directly my address is:</strong> 
+                        <br>
+                        0x44f6498D1403321890F3f2917E00F22dBDE3577a
+                        <br>
+                        Please only send ERC-20/BEP-20 Tokens to this address. CLU will not be sold, others will!
+                        <br>
                     </p>
                 </div>
                 <div class="box">
@@ -181,7 +200,7 @@
                 <p>
                 <strong>Clutrack.io</strong> was created by <a href="https://twitter.com/maxbridgland">Max Bridgland</a> and is <strong>NOT</strong> affiliated with the CluCoin team. The website content
                 is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. We will never request to withdraw from your account. If you ever get a request
-                that requires you pay gas, reject it! <strong>If you find use and want to support the site you can Donate CLU or any ERC/BEP-20 Token to: 0x44f6498D1403321890F3f2917E00F22dBDE3577a</strong>
+                that requires you pay gas, reject it!
                 </p>
             </div>
         </div>
