Update Dono Info

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -155,12 +155,12 @@
                         0xF88e4A3af660ab09979a33c3c99E576244dda5aF
                         <br>
                         Please do NOT send CLU here. It will be drained each month to cover server costs and I'd rather contribute to another token's dips.
-                        <br>
+                        <br><br>
                         <strong style="color: black">If you'd like to support me directly my address is:</strong> 
                         <br>
                         0x44f6498D1403321890F3f2917E00F22dBDE3577a
                         <br>
-                        Please only send ERC-20/BEP-20 Tokens to this address. CLU will not be sold, others will!
+                        Please only send ERC-20/BEP-20 Tokens to this address. CLU will not be sold, others may be!
                         <br>
                     </p>
                 </div>
