--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -84,6 +84,7 @@
                 </h1>
                 <p class="subtitle">
                     Connect to your BSC Wallet and join {{count}} others tracking their rewards<br>
+                    Linking your wallet enables lifetime tracking and better reports!
                 </p>
                 <button id="rusty" onclick="sign()" class="button is-rounded is-warning">
                     Sign In With Wallet
@@ -131,7 +132,10 @@
                         You will <strong style="color: black">NEVER</strong> receive a request to send CLU/BNB/Any Token to Anywhere. If you ever
                         get a request to send funds, reject it and immediately contact me on Discord (@macs#0420) or Twitter
                         (@maxbridgland). All source code that this site runs on is available for public viewing and auditing
-                        on GitHub. Click the button above to head over to the GitHub Source.
+                        on GitHub. Click the button above to head over to the GitHub Source.<br><br>
+                        The reason you must link your wallet to get longer reporting times is because it takes a snapshot every hour
+                        of your balance. There are 55k holders at the time of writing this and that number is growing rapidly, I can't
+                        track all of them. If you are linked, you will be able to see your rewards from the time of linking!
                     </p>
                     <br><br>
                 </div>
