--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -105,12 +105,19 @@
                         <br>
                         RPB = Reward Per Block (0.3 Blocks per second are processed)
                     </p>
-                    <hr style="background-color: grey">
+                    <hr style="color: rgb(87, 87, 87)">
                     <div id="rewardStats">
                         <p class="subtitle" style="color: black">
                             Loading Reward Stats...
                         </p>
                     </div>
+                    <hr style="color: rgb(87, 87, 87)">
+                    <div id="longTermStats">
+                        <p class="subtitle" style="color: black">
+                            {{longterm_msg}}
+                        </p>
+                    </div>
+                    <br>
                 </div>
             </div>
         </div>
