--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -86,6 +86,11 @@
                             Connect To Wallet
                         </a>
                         {% endif %}
+                        {% if logged_in %}
+                        <a style="margin-left: 5px;" class="button is-danger" href="https://clutrack.io/logout">
+                            Logout
+                        </a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
