--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -86,7 +86,7 @@
                             Connect To Wallet
                         </a>
                         {% endif %}
-                        {% if logged_in %}
+                        {% if is_logged_in %}
                         <a style="margin-left: 5px;" class="button is-danger" href="https://clutrack.io/logout">
                             Logout
                         </a>
