--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -64,6 +64,8 @@
                         </a>
                     </div>
                     <div class="navbar-end">
+                        <p class="subtitle" id="cluPrice">
+                        </p>
                         <form action='/search' method='GET'>
                             <div class="field has-addons is-grouped-right">
                                 <div class="control">
@@ -141,10 +143,42 @@
     <script src="assets/reward.js"></script>
     <script>
         window.addEventListener('load', function () {
+            fetch('https://api.pancakeswap.info/api/v2/tokens/0x1162e2efce13f99ed259ffc24d99108aaa0ce935',{
+                method: 'get',
+                headers: {'Content-Type': 'application/json'}
+            }).then((response) => {
+                response.json().then(data => {
+                    if (data.data !== null) {
+                        var elem = document.getElementById('cluPrice')
+                        elem.innerHTML = `
+                        <p class="subtitle" id="cluPrice">
+                            CLU Price: $` + data.data.price.slice(14) + ` | ` + data.data.price_BNB.slice(14) + `
+                        </p>
+                        `
+                    }
+                })
+            })
             getRewards(`{{wallet_addr}}`)
             var intervalId = window.setInterval(function () {
                 getRewards(`{{wallet_addr}}`)
             }, 30000)
+            var interval = window.setInterval(function() {
+                fetch('https://api.pancakeswap.info/api/v2/tokens/0x1162e2efce13f99ed259ffc24d99108aaa0ce935',{
+                    method: 'get',
+                    headers: {'Content-Type': 'application/json'}
+                }).then((response) => {
+                    response.json().then(data => {
+                        if (data.data !== null) {
+                            var elem = document.getElementById('cluPrice')
+                            elem.innerHTML = `
+                            <p class="subtitle" id="cluPrice">
+                                CLU Price: $` + data.data.price.slice(14) + ` | ` + data.data.price_BNB.slice(14) + `
+                            </p>
+                            `
+                        }
+                    })
+                })
+            }, 60000)
         })
     </script>
 </body>
