--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -151,7 +151,7 @@
                     if (data.data !== null) {
                         var elem = document.getElementById('cluPrice')
                         elem.innerHTML = `
-                        <p class="subtitle" id="cluPrice" style="font-size: x-small; margin-right: 5px;">
+                        <p class="subtitle" id="cluPrice" style="font-size: x-small; margin-right: 5px;  padding-top: 10px;">
                             CLU Price: $` + data.price + ` | ` + data.price_BNB + `
                         </p>
                         `
@@ -171,7 +171,7 @@
                         if (data.data !== null) {
                             var elem = document.getElementById('cluPrice')
                             elem.innerHTML = `
-                            <p class="subtitle" id="cluPrice" style="font-size: x-small; margin-right: 5px;">
+                            <p class="subtitle" id="cluPrice" style="font-size: x-small; margin-right: 5px; padding-top: 10px;">
                                 CLU Price: $` + data.price + ` | ` + data.price_BNB + `
                             </p>
                             `
