--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -152,7 +152,7 @@
                         var elem = document.getElementById('cluPrice')
                         elem.innerHTML = `
                         <p class="subtitle" id="cluPrice" style="font-size: x-small; margin-right: 5px;  padding-top: 10px;">
-                            CLU Price: $` + data.price + ` | ` + data.price_BNB + `
+                            $` + data.price + `<br>` + data.price_BNB + ` BNB
                         </p>
                         `
                     }
@@ -172,7 +172,7 @@
                             var elem = document.getElementById('cluPrice')
                             elem.innerHTML = `
                             <p class="subtitle" id="cluPrice" style="font-size: x-small; margin-right: 5px; padding-top: 10px;">
-                                CLU Price: $` + data.price + ` | ` + data.price_BNB + `
+                                $` + data.price + `<br>` + data.price_BNB + ` BNB
                             </p>
                             `
                         }
