--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -152,7 +152,7 @@
                         var elem = document.getElementById('cluPrice')
                         elem.innerHTML = `
                         <p class="subtitle" id="cluPrice" style="font-size: small; margin-right: 10px;  padding-top: 8px;">
-                            $` + data.price + `<br>` + data.price_BNB + ` BNB
+                            ` + data.price + ` USD<br>` + data.price_BNB + ` BNB
                         </p>
                         `
                     }
@@ -172,7 +172,7 @@
                             var elem = document.getElementById('cluPrice')
                             elem.innerHTML = `
                             <p class="subtitle" id="cluPrice" style="font-size: small; margin-right: 10px; padding-top: 8px;">
-                                $` + data.price + `<br>` + data.price_BNB + ` BNB
+                                ` + data.price + ` USD<br>` + data.price_BNB + ` BNB
                             </p>
                             `
                         }
