--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -143,7 +143,7 @@
     <script src="assets/reward.js"></script>
     <script>
         window.addEventListener('load', function () {
-            fetch('http://localhost:8000/getPrice',{
+            fetch('https://clutrack.io/getPrice',{
                 method: 'get',
                 headers: {'Content-Type': 'application/json'}
             }).then((response) => {
@@ -163,7 +163,7 @@
                 getRewards(`{{wallet_addr}}`)
             }, 30000)
             var interval = window.setInterval(function() {
-                fetch('http://localhost:8000/getPrice',{
+                fetch('https://clutrack.io/getPrice',{
                     method: 'get',
                     headers: {'Content-Type': 'application/json'}
                 }).then((response) => {
