--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -89,7 +89,7 @@
                         </a>
                         {% endif %}
                         {% if is_logged_in %}
-                        <a style="margin-left: 5px;" class="button is-danger" href="https://clutrack.io/logout">
+                        <a style="margin-left: 5px;" class="button is-danger" href="https://clutrack.io//logout">
                             Logout
                         </a>
                         {% endif %}
@@ -143,7 +143,7 @@
     <script src="assets/reward.js"></script>
     <script>
         window.addEventListener('load', function () {
-            fetch('https://clutrack.io/getPrice',{
+            fetch('https://clutrack.io//getPrice',{
                 method: 'get',
                 headers: {'Content-Type': 'application/json'}
             }).then((response) => {
@@ -163,7 +163,7 @@
                 getRewards(`{{wallet_addr}}`)
             }, 30000)
             var interval = window.setInterval(function() {
-                fetch('https://clutrack.io/getPrice',{
+                fetch('https://clutrack.io//getPrice',{
                     method: 'get',
                     headers: {'Content-Type': 'application/json'}
                 }).then((response) => {
