--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,14 +30,14 @@
 
 <head>
     <script data-ad-client="ca-pub-9279253230674491" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="robots" content="noindex"/>
     <link rel="icon" href="https://clucoin.com/static/images/favicon/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CluTrack | CLU Reward Tracker</title>
     <meta name="title" content="CluTrack.io - CluCoin Redistribution Tracker">
-    <meta name="description"
-        content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
-
+    <meta name="description" content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
+    <meta keywords="clucoin, clutrack, clu token, clucoin, clu reflections" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://metatags.io/">
