Add Reflection Rate and Projections data

--- a/app/templates/badaddress.html
+++ b/app/templates/badaddress.html
@@ -90,11 +90,7 @@
         <div class="hero-foot">
             <br><br>
             <div class="container has-text-centered">
-                <p>
-                <strong>Clutrack.io</strong> was created by <a href="https://twitter.com/maxbridgland">Max Bridgland</a> and is <strong>NOT</strong> affiliated with the CluCoin team. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. We will never request to withdraw from your account. If you ever get a request
-                that requires you pay gas, reject it!
-                </p>
+                <p>{{credits}}</p>
             </div>
         </div>
     </section>
