--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -116,7 +116,7 @@
                     <hr style="color: rgb(87, 87, 87)">
                     <div id="rewardStats">
                         <p class="subtitle" style="color: black">
-                            Loading Reward Stats...
+                            Loading reward stats...
                         </p>
                     </div>
                     <hr style="color: rgb(87, 87, 87)">
@@ -131,11 +131,7 @@
         </div>
         <div class="hero-foot">
             <div class="container has-text-centered">
-                <p>
-                <strong>Clutrack.io</strong> was created by <a href="https://twitter.com/maxbridgland">Max Bridgland</a> and is <strong>NOT</strong> affiliated with the CluCoin team. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. We will never request to withdraw from your account. If you ever get a request
-                that requires you pay gas, reject it! <strong>If you find use and want to support the site you can Donate CLU or any ERC/BEP-20 Token to: 0x44f6498D1403321890F3f2917E00F22dBDE3577a</strong>
-                </p>
+                <p>{{credits}}</p>
             </div>
         </div>
     </section>
