Add Disclaimer modal, fixes and refactors

--- a/app/templates/badaddress.html
+++ b/app/templates/badaddress.html
@@ -91,6 +91,8 @@
             <br><br>
             <div class="container has-text-centered">
                 <p>{{credits}}</p>
+                <br>
+                <p>{{tipjar}}</p>
             </div>
         </div>
     </section>
