--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -131,70 +131,80 @@
                         and stores a JWT token based off your user to keep you logged in.
                         <br><br>
                         You will <strong style="color: black">NEVER</strong> receive a request to send CLU/BNB/Any Token to Anywhere. If you ever
-                        get a request to send funds, reject it and immediately contact me on Discord (@macs#0420) or Twitter
+                        get a request to send funds, reject it and immediately contact Max on Discord (@macs#0420) or Twitter
                         (@maxbridgland). All source code that this site runs on is available for public viewing and auditing
                         on GitHub. Click the button above to head over to the GitHub Source.<br><br>
                         The reason you must link your wallet to get longer reporting times is because it takes a snapshot every hour
-                        of your balance. There are 55k holders at the time of writing this and that number is growing rapidly, I can't
-                        track all of them. If you are linked, you will be able to see your rewards from the time of linking!
+                        of your balance. There are 55k holders at the time of writing this and that number is growing rapidly. We can't
+                        track all of them! Once you are linked, you will be able to see your rewards from that time forward!
                     </p>
                     <br><br>
                 </div>
                 <div class="box">
                     <h1 class="title" style="color: black">Tips to Stay Safe</h1>
                     <p class="subtitle" style="color: black;">
-                        • Make sure the URL is <strong style="color: black">https://clutrack.io</strong>
+                        • Make sure the site address is <strong style="color: black">https://clutrack.io</strong>
                         <br>
-                        • Never give your 12 Phrase Passcode Key to Anybody EVER
+                        • Never give your 12-word Secret Phrase / Passcode Key to Anybody EVER
                         <br>
-                        • Never give your private key and password to Anybody EVER
+                        • Never give your Private Key and Password to Anybody EVER
                         <br>
-                        • This site will never ask you for your money. If it does check the URL
+                        • CluTrack is free. It will not ask you for your money. If it does check the site address again!
                     </p>
                 </div>
                 <div class="box">
                     <h1 class="title" style="color: black">Want to Support CluTrack?</h1>
                     <p class="subtitle" style="color: black;">
-                        <strong style="color:black">If you'd like to support CluTrack server costs:</strong>
-                        <br>
-                        0xF88e4A3af660ab09979a33c3c99E576244dda5aF
-                        <br>
-                        Please do NOT send CLU here. It will be drained each month to cover server costs and I'd rather contribute to another token's dips.
-                        <br><br>
-                        <strong style="color: black">If you'd like to support me directly my address is:</strong> 
-                        <br>
-                        0x44f6498D1403321890F3f2917E00F22dBDE3577a
-                        <br>
-                        Please only send ERC-20/BEP-20 Tokens to this address. CLU will not be sold, others may be!
-                        <br>
+                        {{tipjar}}
                     </p>
                 </div>
                 <div class="box">
                     <div class="container has-text-centered">
-                        <h1 class="title" style="color: black">Socials</h1>
+                        <h1 class="title" style="color: black">Team Socials</h1>
                         <div class="field is-grouped-centered">
                             <div class="row">
-
-                                <a class="button" href="https://github.com/M4cs">
-                                    <span class="icon">
-                                    <i class="fab fa-github"></i>
-                                    </span>
-                                    <span>GitHub</span>
-                                </a>
-                                <a class="button is-info" href="https://twitter.com/maxbridgland">
+                                <a target="_blank" class="button is-info" href="https://twitter.com/maxbridgland">
                                     <span class="icon">
                                         <i class="fab fa-twitter"></i>
                                     </span>
                                     <span>@maxbridgland</span>
                                 </a>
-                                <a class="button is-dark" href="https://linkedin.com/id/maxbridgland">
+                                <a target="_blank" class="button" href="https://github.com/M4cs">
+                                    <span class="icon">
+                                        <i class="fab fa-github"></i>
+                                    </span>
+                                    <span>GitHub</span>
+                                </a>
+                                <a target="_blank" class="button is-dark" href="https://linkedin.com/in/maxbridgland">
                                     <span class="icon is-small">
-                                    <i class="fab fa-linkedin"></i>
+                                        <i class="fab fa-linkedin"></i>
                                     </span>
                                     <span>LinkedIn</span>
                                 </a>
                             </div>
-                        </p>
+                        </div>
+                        <div class="field is-grouped-centered">
+                            <div class="row">
+                                <a target="_blank" class="button is-info" href="https://twitter.com/jerisbrisk">
+                                    <span class="icon">
+                                        <i class="fab fa-twitter"></i>
+                                    </span>
+                                    <span>@jerisbrisk</span>
+                                </a>
+                                <a target="_blank" class="button" href="https://github.com/jerisbrisk">
+                                    <span class="icon">
+                                        <i class="fab fa-github"></i>
+                                    </span>
+                                    <span>GitHub</span>
+                                </a>                                
+                                <a target="_blank" class="button is-dark" href="https://linkedin.com/in/jeremystephenanderson">
+                                    <span class="icon is-small">
+                                        <i class="fab fa-linkedin"></i>
+                                    </span>
+                                    <span>LinkedIn</span>
+                                </a>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
             </div>
