--- a/app/templates/badaddress.html
+++ b/app/templates/badaddress.html
@@ -52,7 +52,7 @@
     <meta property="twitter:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
     <meta property="twitter:image" content="https://clucoin.com/static/images/3000.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="stylesheet" href="/assets/css/clu.css">
     <script src="https://kit.fontawesome.com/bfef34323a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -68,7 +68,7 @@
                         </a>
                     </div>
                     <div class="navbar-end">
-                        <a style="margin-left: 5px;" class="button is-warning"
+                        <a style="margin-left: 5px;" class="button is-primary gradient"
                             href="https://github.com/M4cs/clutrack-io" target="_blank">
                             View Source Code
                         </a>
