Update Caps on IO

--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -61,7 +61,7 @@
                     <div class="navbar-brand">
                         <a class="navbar-item" href="https://clutrack.io/">
                             <img src="https://clucoin.com/static/images/3000.png" style="margin-right: 2%" alt="Logo">
-                            CLUTRACK.io
+                            CLUTRACK.IO
                         </a>
                     </div>
                     <div class="navbar-end">
